<resources>
    <string name="app_name">Catatin</string>

    <!--    Splash Screen Text-->
    <string name="splashscreen_text_description">Your personal notes</string>

    <!--    Onboarding Screen Text-->
    <string name="onboarding_text_skip">Lewati</string>
    <string name="onboarding_title_content1">Akses Mudah</string>
    <string name="onboarding_title_content2">Pencadangan Data</string>
    <string name="onboarding_title_content3">Amankan Catatanmu</string>

    <string name="onboarding_text_content1">“Catatin membantumu membuat catatan dengan mudah dimanapun dan kapanpun”</string>
    <string name="onboarding_text_content2">“Catatin memastikan catatan yang kamu buat tersinkronisasi sehingga kamu tidak perlu khawatir akan kehilangan data ”</string>
    <string name="onboarding_text_content3">“Catatin memastikan bahwa catatanmu yang bersifat pribadi aman hanya dengan memgatur nomor pin untuk membukanya”</string>

    <string name="onboarding_title_dialogskip">Lewati Halaman Ini</string>
    <string name="onboarding_text_dialogskip">Pilih iya jika kamu sudah paham, dan kamu akan melewati halaman ini</string>

    <string name="onboarding_text_understand">Mengerti</string>

    <!--    Home Screen Text-->
    <string name="home_text_total_note">Kamu memiliki %s catatan</string>
    <string name="home_title_empty_note">Belum Memiliki Catatan</string>
    <string name="home_text_empty_note">Kamu memiliki catatan apapun, silahkan coba untuk membuat catatan</string>

    <!--    Search Screen Text-->
    <string name="search_title_empty_note">Catatan Tidak Ditemukan</string>
    <string name="search_text_empty_note">Mohon maaf, catatan yang kamu cari tidak ditemukan. Coba cari dengan kata kunci lainnya.</string>

    <!--    Catatin Menu Dialog Screen Text-->
    <string name="dialog_title_menu_add">Tambah Catatan</string>
    <string name="dialog_title_menu_notes">Catatan Biasa</string>
    <string name="dialog_title_menu_todo">Daftar Pekerjaan</string>
    <string name="dialog_title_menu_draw">Coretan</string>

    <string name="dialog_title_menu_fullscreen">Layar Penuh</string>
    <string name="dialog_title_menu_alarm">Pengingat</string>
    <string name="dialog_title_menu_share">Bagikan</string>
    <string name="dialog_title_menu_lock">Kunci</string>
    <string name="dialog_title_menu_copy">Buat Salinan</string>
    <string name="dialog_title_menu_focus">Mode Fokus</string>
    <string name="dialog_title_menu_pdf">Jadikan PDF</string>

    <string name="dialog_text_menu_premium">(Akses Premium)</string>

    <string name="dialog_title_todo_add">Tambah Pekerjaan</string>

    <string name="dialog_title_menu_attachment">Lampiran</string>
    <string name="dialog_title_menu_file">Berkas</string>
    <string name="dialog_title_menu_location">Lokasi</string>
    <string name="dialog_title_menu_video">Video</string>
    <string name="dialog_title_menu_audio">Suara</string>
    <string name="dialog_title_menu_sketch">Sketsa</string>

    <!--    General Screen Text-->
    <string name="general_text_no">Tidak</string>
    <string name="general_text_yes">Iya</string>
    <string name="general_text_setting">Pengaturan</string>
    <string name="general_text_search">Cari</string>

    <string name="general_text_hallo">Halo, %s</string>

    <string name="general_text_good_morning">Selamat Pagi !</string>
    <string name="general_text_good_afternoon">Selamat Siang !</string>
    <string name="general_text_good_evening">Selamat Sore !</string>
    <string name="general_text_good_night">Selamat Malam !</string>

    <string name="general_text_fullscreen_close">Tekan kembali untuk keluar dari mode layar penuh</string>

    <string name="general_text_add">Tambah</string>

    <string name="general_text_login_by_google">Masuk Menggunakan Google</string>

    <string name="general_text_add_alarm">Tambah Pengingat</string>

    <string name="general_text_notes_locked">Terkunci</string>
    <string name="general_text_emptystring"> </string>

    <string name="general_title_delete_note">Hapus Catatan</string>
    <string name="general_text_delete_note">Mungkin ini adalah catatan penting untukmu. Apakah kamu ingin menghapusnya ?</string>

    <string name="general_text_timer_minutes_seconds">%02d:%02d</string>
    <string name="general_text_empty_notestitle">Judul Belum Ada</string>
    <!--    Note Screen Text-->
    <string name="note_title_add">Tambah Catatan</string>
    <string name="note_title_placeholder">Masukkan Judul Disini...</string>
    <string name="note_text_description">%s | %s karakter</string>
    <string name="note_hint_placeholder">Silahkan ketikkan catatan kamu disini...</string>

    <!--    To'do Screen Text-->
    <string name="todo_title_add">Tambah Daftar Pekerjaan</string>
    <string name="todo_text_description">%s | %s aktivitas</string>
    <string name="todo_text_alarm">Alarm pada : %s</string>

    <string name="todo_title_empty_data">Belum Memiliki Daftar Pekerjaan</string>
    <string name="todo_text_empty_data">Kamu belum memiliki daftar pekerjaan untuk catatan ini, silahkan buat daftar pekerjaan terlebih dahulu</string>
    <!--    Settings Screen Text-->
    <string name="settings_title_account">Akun</string>
    <string name="settings_title_security">Keamanan</string>
    <string name="settings_title_backup">Pencadangan</string>


    <string name="settings_menu_pin_setup">Keamanan</string>
    <string name="settings_menu_global_pin">Aktifkan Pin Utama</string>
    <string name="settings_menu_reset_pin">Atur Ulang Pin</string>

    <string name="settings_menu_backup_by_google">Pulihkan Data dari Google Drive</string>
    <string name="settings_menu_backup_to_google">Cadangkan Data di Google Drive</string>
    <string name="settings_menu_backup_manual">Cadangkan Manual di  Hp Kamu</string>
    <string name="settings_menu_backup_history">Riwayat Pencadangan</string>

    <string name="setting_text_pin_not_setup">Belum diatur</string>
    <string name="settings_text_not_logged_in">Kamu belum masuk menggunakan akun googlemu, silahkan masuk terlebih dahulu agar dapat menggunakan beberapa fitur tertentu</string>

    <!--    Login Screen Text-->
    <string name="login_title">Masuk Terlebih Dahulu</string>
    <string name="login_text_description">Untuk dapat menggunakan fitur ini, silahkan untuk login terlebih dahulu</string>

    <!--    Pin Screen Text-->
    <string name="pin_text_login_title">Masukkan Nomor Pin</string>
    <string name="pin_text_login_description">Masukan 6 Digit Nomor Pin Kamu Untuk Masuk</string>

    <!--    Reset Pin Screen Text-->
    <string name="resetpin_title_page">Lupa Nomor Pin</string>
    <string name="resetpin_title_page_success">Nomor Pin Dihapus</string>
    <string name="resetpin_text_description">Silahkan masuk menggunakan google, sehingga kami bisa mengirimkan email mengenai intruksi untuk mengatur ulang nomor pin kamu</string>
    <string name="resetpin_text_description_success">Nomor pin kamu sudah berhasil dihapus, untuk saat ini nomor pin akan dinonaktifkan. Atur ulang nomor pin kamu untuk menjamin keamanan catatanmu !</string>
    <string name="resetpin_action_homepage">Beranda</string>

    <!--    Send Verification Pin Screen Text-->
    <string name="verification_title_page">Kirim Verifikasi Email</string>
    <string name="verification_text_description">Kami akan mengirimkan instruksi mengenai mengatur ulang nomor pin kamu. Silahkan cek kotak masuk email kamu. </string>
    <string name="verification_action_resend">Kirim Ulang Verifikasi Email</string>

    <!--    Filter Screen Text-->
    <string name="filter_title_page">Filter Catatan Berdasarkan</string>
    <string name="filter_action">Pilih Filter</string>

    <!--    Create Pin Screen Text-->
    <string name="createpin_title_page">Tambah Nomor Pin</string>
    <string name="createpin_text_description">Masukkan 6 Digit Nomor Pin Yang Akan Digunakan Untuk Masuk </string>

    <string name="createpin_title_page_confirmation">Konfirmasi Nomor Pin</string>
    <string name="createpin_text_description_confirmation">Masukkan 6 Digit Nomor Pin Untuk Dikonfirmasi</string>
</resources>