<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/verification_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/verification_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/general_ic_back_white" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layoutAnimation="@anim/layout_animation"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/verification_ic_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_appbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/verification_title_page"
            android:textAlignment="center"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_horizontal"
            android:text="@string/verification_text_description"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/verification_button_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/general_selector_button"
        android:fontFamily="@font/roboto_bold"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:text="@string/verification_action_resend"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>