<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.search.SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/general_ic_back_white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/general_bg_form"
                android:drawableRight="@drawable/ic_general_ic_search_primary"
                android:hint="@string/note_title_placeholder"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="12sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ViewFlipper
        android:id="@+id/home_viewflipper_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_ic_empty_note" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center_horizontal"
                android:text="@string/search_title_empty_note"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/search_text_empty_note"
                android:textAlignment="center"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ViewFlipper>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_general_ic_add_black"
        app:borderWidth="0dp"
        app:elevation="10dp"
        app:fabCustomSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:maxImageSize="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>