<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note_coordinatorlayout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".presentation.note.NoteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/note_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/note_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/general_ic_back_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_title_add"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_50sdp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/note_edittext_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:background="@drawable/general_bg_form"
                android:hint="@string/note_title_placeholder"
                android:maxLines="1"
                android:padding="@dimen/_13sdp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_10ssp" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/note_adview_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:visibility="gone"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-7778597937630443/7311721104" />

            <TextView
                android:id="@+id/note_textview_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/_10ssp"
                tools:text="26 Agustus 2020 | 5 Karakter" />

            <com.chinalwb.are.AREditText
                android:id="@+id/note_richtext_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:hint="@string/note_hint_placeholder"
                android:padding="@dimen/_16sdp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="1000">

        <com.chinalwb.are.styles.toolbar.ARE_ToolbarDefault
            android:id="@+id/note_richtext_toolbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="850"
            android:background="@color/colorRichTextEditor"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="150"
            android:background="@color/colorAccent"
            android:gravity="center">

            <ImageView
                android:id="@+id/note_imageview_arrow"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                app:srcCompat="@drawable/general_ic_arrow_right_black" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>